# gdf

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: good_abbrs.md  map_events.md
frontend/: CMakeLists.txt  autotileset.c  autotileset.h  defs.h  gdf_config.c  gdf_config.h  kind_load.c  kind_load.h  main.c  render.c  render.h  sfx.c  sfx.h  tileset.c  tileset.h
gdf_int/: CMakeLists.txt
gdf_int/inc/: CMakeLists.txt  character.h  map.h  tile.h  vec2.h  world.h  world_gen.h
gdf_int/src/: CMakeLists.txt  character.c  map.c  world.c  world_gen.c
resources/: edge_selection.msk  gdf_config.toml  render_kinds.toml  rock.aseprite  sfx.toml
resources/data/: render_kinds.toml  tile_kinds.toml
resources/textures/: granite_sheet.ase  rock_sheet.ase
tomlc17/: .gitignore  CMakeLists.txt  Makefile  README.md
tomlc17/.github/workflows/: c-cpp.yml
tomlc17/simple/: Makefile  simple.c
tomlc17/test/: Makefile
tomlc17/test/cpp/: Makefile  test1.cpp
tomlc17/test/merge/: Makefile
tomlc17/test/parser/: Makefile  parser.c
tomlc17/test/scankey/: Makefile
tomlc17/test/scanvalue/: Makefile  scanvalue.c
tomlc17/test/stdtest/: Makefile  parser.c  run.sh
